# EVM-MemPool

./: .env  .env.example  Cargo.toml  README.md  README_CN.md
src/: main.rs
src/ai/: chatgpt.rs
src/execute/: guardian.rs
src/helper/: Dex.json  hacker.json  test.txt
src/listener/: fetcher.rs  get_transaction_by_address.rs  listen.rs  mod.rs  tx_details.txt
src/utils/: addresses.json  addresses_details.txt  addresses_poisoning.json  hacker_eth.json  tools.rs
