[package]
name = "EVM-MemPool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1.18.0", features = ["full"] }
text-to-ascii-art = "0.1.5"
ethers = { version = "2.0.14", features = ["ws"] }
serde_json = "1.0"
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
